@@ -159,6 +159,7 @@ public:
 
     RDirNode* getParent() const;
 
+    bool isDir(const std::string& path) const;
     void findDirs(const std::string& path, std::list<RDirNode*>& dirs);
 
     const vec2f & getPos() const;
