@@ -1,5 +1,6 @@
 0.38:
  * Use AM_CPPFLAGS in Makefile.am to allow passing custom CPPFLAGS.
+ * Don't add files that match the path of a known directory.
 
 0.37:
  * Made SVN log GMT timestamp conversion fix portable.
